// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadDifferentialExpression action Dispatches appropriately on failure 1`] = `
{
  "payload": {
    "advancedFilters": [],
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on failure 2`] = `
{
  "payload": {
    "error": [Error: random error!],
    "experimentId": "1234",
  },
  "type": "diffExpr/error",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success for comparison between samples 1`] = `
{
  "payload": {
    "advancedFilters": [],
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success for comparison between samples 2`] = `
{
  "payload": {
    "comparisonGroup": {
      "basis": "condition/condition-control",
      "cellSet": "louvain/louvain-0",
      "compareWith": "louvain/louvain-1",
    },
    "comparisonType": "within",
    "data": [
      {
        "AveExpr": 3.054,
        "Gene": "EASAD0",
        "gene_names": "A",
        "logFC": -1.427,
      },
      {
        "AveExpr": 2.356,
        "Gene": "ENASD23",
        "gene_names": "B",
        "logFC": -2.427,
      },
      {
        "AveExpr": 2.19,
        "Gene": "EN34S",
        "gene_names": "C",
        "logFC": -3.427,
      },
      {
        "AveExpr": 2.189,
        "Gene": "ENSD33",
        "gene_names": "D",
        "logFC": -4.427,
      },
      {
        "AveExpr": 1.788,
        "Gene": "ENASD233",
        "gene_names": "E",
        "logFC": -5.427,
      },
    ],
    "experimentId": "1234",
    "total": 500,
  },
  "type": "diffExpr/loaded",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success for comparison within a sample 1`] = `
{
  "payload": {
    "advancedFilters": [],
    "experimentId": "1234",
  },
  "type": "diffExpr/loading",
}
`;

exports[`loadDifferentialExpression action Dispatches appropriately on success for comparison within a sample 2`] = `
{
  "payload": {
    "comparisonGroup": {
      "basis": "condition/condition-control",
      "cellSet": "louvain/louvain-0",
      "compareWith": "louvain/louvain-1",
    },
    "comparisonType": "within",
    "data": [
      {
        "Gene": "EASAD0",
        "auc": "0.1",
        "gene_names": "A",
        "logFC": -1.427,
        "p_val": 1.496,
        "p_val_adj": 1.647,
        "pct_1": "100",
        "pct_2": "100",
      },
      {
        "Gene": "ENASD23",
        "auc": "0.2",
        "gene_names": "B",
        "logFC": -2.427,
        "p_val": 2.496,
        "p_val_adj": 2.647,
        "pct_1": "90",
        "pct_2": "90",
      },
      {
        "Gene": "EN34S",
        "auc": "0.3",
        "gene_names": "C",
        "logFC": -3.427,
        "p_val": 3.496,
        "p_val_adj": 3.647,
        "pct_1": "80",
        "pct_2": "80",
      },
      {
        "Gene": "ENSD33",
        "auc": "0.4",
        "gene_names": "D",
        "logFC": -4.427,
        "p_val": 4.496,
        "p_val_adj": 4.647,
        "pct_1": "70",
        "pct_2": "70",
      },
      {
        "Gene": "ENASD233",
        "auc": "0.5",
        "gene_names": "E",
        "logFC": -5.427,
        "p_val": 5.496,
        "p_val_adj": 5.647,
        "pct_1": "60",
        "pct_2": "60",
      },
    ],
    "experimentId": "1234",
    "total": 500,
  },
  "type": "diffExpr/loaded",
}
`;

exports[`loadDifferentialExpression action Doesnt crash if total is 0 1`] = `
[
  {
    "payload": {
      "advancedFilters": [],
      "experimentId": "1234",
    },
    "type": "diffExpr/loading",
  },
  {
    "payload": {
      "comparisonGroup": {
        "basis": "condition/condition-control",
        "cellSet": "louvain/louvain-0",
        "compareWith": "louvain/louvain-1",
      },
      "comparisonType": "within",
      "data": [],
      "experimentId": "1234",
      "total": 0,
    },
    "type": "diffExpr/loaded",
  },
]
`;
